# amazon-kinesis-video-streams-dcep

./: CMakeLists.txt  README.md  dcepFilePaths.cmake
source/: dcep_api.c  dcep_endianness.c
source/include/: dcep_api.h  dcep_data_types.h  dcep_endianness.h
